# hci-gui-final-project

./: .gitignore  Makefile  Readme.md  TODO  pyproject.toml
Group_Assignment-HGP/Odin_Thomas_3168058-Catez_Benoit_xxxxxxx-Laumonier_Quentin_xxxxxxx/code/: board.py
HGP_Group_12_Project/code/: __main__.py  board.py  game_logic.py  go.py  handicap.py  piece.py  player_names_page.py  score_board.py  start_page.py  stylesheet.qss
HGP_Group_12_Project/deleteBeforeSubmission/tutorials/reversi/: reversi.py
HGP_Group_12_Project/deleteBeforeSubmission/tutorials/tictactoe/: tictactoe.py
HGP_Group_12_Project/deleteBeforeSubmission/zetcode-pyqt5-tutorial-extracts/all/03.FirstPrograms/: 01.SimpleExample.py  06.CenteringAWindowOnAScreen.py
HGP_Group_12_Project/deleteBeforeSubmission/zetcode-pyqt5-tutorial-extracts/all/04.MenusAndToolBars/: 01.StatusBar.py  04.CheckMenu.py  05.ContextMenu.py  06.ToolBar.py  07.PuttingItAllTogether.py
HGP_Group_12_Project/deleteBeforeSubmission/zetcode-pyqt5-tutorial-extracts/all/05.LayoutManagement/: 01.absolute.py  02.buttons.py  04.review.py
HGP_Group_12_Project/deleteBeforeSubmission/zetcode-pyqt5-tutorial-extracts/all/06.EventsAndSignals/: 02.escape.py  03.eventobject.py  04.eventsource.py  05.customsignal.py
HGP_Group_12_Project/deleteBeforeSubmission/zetcode-pyqt5-tutorial-extracts/all/07.Dialogs/: 02.colordialog.py  03.fontdialog.py
HGP_Group_12_Project/deleteBeforeSubmission/zetcode-pyqt5-tutorial-extracts/all/08.WidgetsI/: 01.checkbox.py  02.togglebutton.py  03.slider.py  04.progressbar.py  05.calendar.py
(+24 files in other folders)
