[tool.poetry]
name = "tutorials-&-assigments-pyqt6"
version = "0.1.0"
description = "Tutorial and Assigment for pyqt6"
authors = ["Thomas ODIN <thomasodin13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyqt6 = "^6.7.1"
matplotlib = "^3.9.2"
pyqtgraph = "^0.13.7"
requests-cache = "^1.2.1"
pandas = "^2.2.3"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.12.0"
vulture = "^2.13"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
